--- a/.github/workflows/main_notifications.yaml
+++ b/.github/workflows/main_notifications.yaml
@@ -6,11 +6,12 @@ on:
       - main
 
 env:
-  CMD_PATH: cmd/notifications/main.go
   CONTAINER_REGISTRY: 'registry.digitalocean.com'
+  CONTAINER_REGISTRY_PREFIX: cloudspree
+  APPLICATION_NAME: 'notifications'
 
 jobs:
-  build-go:
+  test:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
@@ -19,8 +20,22 @@ jobs:
           go-version: '^1.18'
       - name: show go version
         run: go version
+      - name: run tests
+        run: go test -v ./...
+
+  build-go:
+    runs-on: ubuntu-latest
+    needs:
+      - test
+    steps:
+      - uses: actions/checkout@v2
+      - uses: actions/setup-go@v3
+        with:
+          go-version: '^1.18'
+      - name: show go version
+        run: go version
       - name: build
-        run: go build -o main ${{ env.CMD_PATH }}
+        run: go build -o main cmd/${{ env.APPLICATION_NAME }}/main.go
       - uses: actions/upload-artifact@v2
         with:
           name: app
@@ -47,10 +62,10 @@ jobs:
       - name: Build and push
         uses: docker/build-push-action@v2
         with:
-          file: docker/notifications/Dockerfile
+          file: docker/${{ env.APPLICATION_NAME }}/Dockerfile
           context: ./
           push: true
           tags: |
-            ${{ env.CONTAINER_REGISTRY }}/cloudspree/notifications:${{ github.sha }}
+            ${{ env.CONTAINER_REGISTRY }}/${{ env.CONTAINER_REGISTRY_PREFIX }}/${{ env.APPLICATION_NAME }}:${{ github.sha }}
           build-args:
             VERSION=${{ github.sha }}
