--- a/.github/workflows/main_provider.yaml
+++ b/.github/workflows/main_provider.yaml
@@ -1,18 +1,18 @@
-name: '[notifications] Test and Build'
+name: '[provider] Test and Build'
 
 on:
   push:
     branches:
       - main
     paths:
-      - cmd/notifications/**
-      - .github/workflows/main_notifications.yaml
-      - docker/notifications/**
+      - cmd/provider/**
+      - .github/workflows/main_provider.yaml
+      - docker/provider/**
 
 env:
   CONTAINER_REGISTRY: 'registry.digitalocean.com'
   CONTAINER_REGISTRY_PREFIX: cloudspree
-  APPLICATION_NAME: 'notifications'
+  APPLICATION_NAME: 'provider'
 
 jobs:
   test:
