--- a/.github/workflows/main_notifications.yaml
+++ b/.github/workflows/main_notifications.yaml
@@ -55,6 +55,8 @@ jobs:
       - uses: actions/download-artifact@v2
         with:
           name: app
+      - name: set execution bit
+        run: chmod +x main
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v1
       - name: login to digital ocean
